kube/Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cosign-keyless-github-admission-webhook
