kube/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cosign-keyless-github-admission-webhook
  labels:
    app: cosign-keyless-github-admission-webhook
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cosign-keyless-github-admission-webhook
  template:
    metadata:
      labels:
        app: cosign-keyless-github-admission-webhook
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 10000
        runAsGroup: 10000
      containers:
      - name: cosign-keyless-github-admission-webhook
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
        image: ghcr.io/chrisns/cosign-keyless-github-admission-webhook:latest
        imagePullPolicy: IfNotPresent
        ports:
          - name: https
            containerPort: 8443
          - name: http
            containerPort: 8080
        resources: {}
        livenessProbe:
          httpGet:
            path: /
            port: http
        readinessProbe:
          httpGet:
            path: /
            port: http
