kube/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cosign-keyless-admission-webhook
spec:
  selector:
    app: cosign-keyless-admission-webhook
  ports:
  - port: 443
    targetPort: https
