kube/ValidatingWebhookConfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "keyless-cosign-check"
  annotations:
    cert-manager.io/inject-ca-from: cosign-keyless-github-admission-webhook/cosign-keyless-github-admission-webhook
webhooks:
- name: "subject.cosign.sigstore"
  namespaceSelector:
    matchExpressions:
    - key: kubernetes.io/metadata.name
      operator: NotIn
      values:
      - kube-system
      - kube-public
      - hnc-system
      - kube-node-lease
      - cosign-keyless-github-admission-webhook
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["CREATE"]
    resources:   ["pods"]
    scope:       "Namespaced"
  clientConfig:
    # url: https://cooocoo.loca.lt
    # caBundle: k get configmaps -n kube-system kube-root-ca.crt -o jsonpath='{.data.ca\.crt}' | base64
    # LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM1ekNDQWMrZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJeE1UQXhOVEUwTXpZMU0xb1hEVE14TVRBeE16RTBNelkxTTFvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTHY1CkFjK0JuR0pmcElod0pTem5OYmpubEpaU3JyK2M1djVEYjMvTXhmMWs1ZFBuVUs0eTZpT0dBODBGejRlV2QyZWQKWnBrKytYbWFQd3NldGVvQWprbkJTQnNSYXozMzZpaXBPK01lbEdQbDlaZm1tdHVnYk9VMlUxRzdPNkc1V2VVTwppci9ua0oyVkZ1cmdaZ29ya1 [...]

    service:
      namespace: "cosign-keyless-github-admission-webhook"
      name: "cosign-keyless-github-admission-webhook"
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  timeoutSeconds: 15
